--- a/.tmux.conf
+++ b/.tmux.conf
@@ -99,21 +99,21 @@ set -g status-right ' %l:%M%P '
 # Keybinds
 # -----------------------------------------------------------------------------
 
-# Change prefix key to M-a
-set -g prefix M-a
-bind M-a send-prefix
+# Change prefix key to M-r
+set -g prefix M-r
+bind M-o send-prefix
 unbind C-b
 
-# Open a tmux command prompt with M-s. Default keybind is `prefix :`
-bind -n M-s command-prompt
+# Enter tmux commands with M-;
+bind -n "M-\;" command-prompt
 
 # Redraw the screen, in case something goes wonky.
-bind -n M-r refresh-client
+#bind -n M-r refresh-client
 
 # Copy / paste. (Pastes from the system clipboard!)
-bind -n M-c copy-mode
-bind M-c send-keys M-c
-bind -n M-v run \
+bind -n M-d copy-mode
+bind M-d send-keys M-d
+bind -n M-c run \
     "command -v xclip > /dev/null && \
      (xclip -out -selection clipboard | tmux load-buffer -); \
      tmux paste-buffer"
@@ -125,12 +125,10 @@ bind -n "M-'" set status
 
 # Launch new windows in the same directory as the current pane
 # Also, unhide the status line whenever you create a new window.
-# Rebind to M-i instead of `prefix c`.
-bind -n M-i new-window -c "#{pane_current_path}" \; set status on
+bind -n M-o new-window -c "#{pane_current_path}" \; set status on
 unbind c
 
 # Unhide the status line when you break a pane into its own window.
-# Also, rebind this action to M-x instead of `prefix shift 1`.
 bind -n M-x break-pane \; set status on
 unbind !
 
@@ -150,34 +148,37 @@ bind -n M-End select-layout even-vertical
 
 
 # Switch panes.
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+bind -n M-l select-pane -L
+bind -n M-n select-pane -D
+bind -n M-e select-pane -U
+bind -n M-u select-pane -R
 
 # Resize panes.
-bind -n M-K resize-pane -U 5
-bind -n M-J resize-pane -D 5
-bind -n M-H resize-pane -L 10
-bind -n M-L resize-pane -R 10
+bind -n M-L resize-pane -L 10
+bind -n M-N resize-pane -D 5
+bind -n M-E resize-pane -U 5
+bind -n M-U resize-pane -R 10
 
 # Split current pane.
-bind h split-window -c "#{pane_current_path}" -h \; swap-pane -U
-bind j split-window -c "#{pane_current_path}"
-bind k split-window -c "#{pane_current_path}" \; swap-pane -U
-bind l split-window -c "#{pane_current_path}" -h
+bind l split-window -c "#{pane_current_path}" -h \; swap-pane -U
+bind n split-window -c "#{pane_current_path}"
+bind e split-window -c "#{pane_current_path}" \; swap-pane -U
+bind u split-window -c "#{pane_current_path}" -h
 
-# Swap two ajacent panes. (The syntax for this changed in tmux 3.0)
-bind M-h swap-pane -d -t {left}
-bind M-j swap-pane -d -t {down}
-bind M-k swap-pane -d -t {up}
-bind M-l swap-pane -d -t {right}
+# Swap two panes.
+#
+# The syntax `{left-of}` doesn't seem to work in tmux 3.0a, so we use {left}
+# instead, as a rough approximation of what we actually want.
+bind M-l swap-pane -d -t {left}
+bind M-n swap-pane -d -t {bottom}
+bind M-e swap-pane -d -t {top}
+bind M-u swap-pane -d -t {right}
 
 
 
 # Switch windows
-bind -n M-, previous-window
-bind -n 'M-;' next-window
+bind -n M-h previous-window
+bind -n M-t next-window
 
 # Select window by number.
 bind -n M-1 select-window -t 1
@@ -208,10 +209,10 @@ bind -n M-. command-prompt -1 -p 'Renumber window to:' 'move-window -t %%'
 unbind .
 
 # Move current pane to another session.
-bind -n M-m command-prompt -p 'Move pane to session:' 'join-pane -t %%:'
+#bind -n M-m command-prompt -p 'Move pane to session:' 'join-pane -t %%:'
 
 # Move current window to another session.
-bind -n M-/ command-prompt -p 'Move window to session:' 'move-window -t %%:'
+#bind -n M-/ command-prompt -p 'Move window to session:' 'move-window -t %%:'
 
 
 
