--- a/.inputrc
+++ b/.inputrc
@@ -14,10 +14,10 @@ set colored-stats on
 # Colorize the common prefix of entries in tab completion lists.
 set colored-completion-prefix on
 
-# Bind meta-i to ctrl-p, enter; i.e. run previous command.
-"\ei": "\C-p\n"
+# Bind alt-semicolon to ctrl-p, enter; i.e. run previous command.
+"\e;": "\C-p\n"
 
-# Bind meta-p to exit shell if last command successful.
+# Bind meta-o to exit shell if last command successful.
 # Gets queued if pressed while a command is running.
 # Can be cancelled with backspace.
-#"\ep": "if [ $? -eq 0 ]; then exit; else false; fi\n"
+"\eo": "if [ $? -eq 0 ]; then exit; else false; fi\n"
