--- a/.tmux.conf
+++ b/.tmux.conf
@@ -99,21 +99,20 @@ set -g status-right ' %l:%M%P '
 # Keybinds
 # -----------------------------------------------------------------------------
 
-# Change prefix key to M-r
-set -g prefix M-r
-bind M-o send-prefix
+# Change prefix key to M-e
+set -g prefix M-e
+bind M-e send-prefix
 unbind C-b
 
-# Enter tmux commands with M-;
-bind -n "M-\;" command-prompt
+# Enter tmux commands with M-p
+bind -n M-p command-prompt
 
 # Redraw the screen, in case something goes wonky.
-#bind -n M-r refresh-client
+bind -n M-r refresh-client
 
 # Copy / paste. (Pastes from the system clipboard!)
-bind -n M-d copy-mode
-bind M-d send-keys M-d
-bind -n M-c run \
+bind -n M-c copy-mode
+bind -n M-v run \
     "command -v xclip > /dev/null && \
      (xclip -out -selection clipboard | tmux load-buffer -); \
      tmux paste-buffer"
@@ -125,7 +124,7 @@ bind -n "M-'" set status
 
 # Launch new windows in the same directory as the current pane
 # Also, unhide the status line whenever you create a new window.
-bind -n M-o new-window -c "#{pane_current_path}" \; set status on
+bind -n M-l new-window -c "#{pane_current_path}" \; set status on
 unbind c
 
 # Unhide the status line when you break a pane into its own window.
@@ -148,16 +147,16 @@ bind -n M-End select-layout even-vertical
 
 
 # Switch panes.
-bind -n M-l select-pane -L
-bind -n M-n select-pane -D
-bind -n M-e select-pane -U
-bind -n M-u select-pane -R
+bind -n M-m select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-i select-pane -R
 
 # Resize panes.
-bind -n M-L resize-pane -L 10
-bind -n M-N resize-pane -D 5
-bind -n M-E resize-pane -U 5
-bind -n M-U resize-pane -R 10
+bind -n M-M resize-pane -L 10
+bind -n M-J resize-pane -D 5
+bind -n M-K resize-pane -U 5
+bind -n M-I resize-pane -R 10
 
 # Split current pane.
 bind l split-window -c "#{pane_current_path}" -h \; swap-pane -U
@@ -169,16 +168,16 @@ bind u split-window -c "#{pane_current_path}" -h
 #
 # The syntax `{left-of}` doesn't seem to work in tmux 3.0a, so we use {left}
 # instead, as a rough approximation of what we actually want.
-bind M-l swap-pane -d -t {left}
-bind M-n swap-pane -d -t {bottom}
-bind M-e swap-pane -d -t {top}
-bind M-u swap-pane -d -t {right}
+bind M-m swap-pane -d -t {left}
+bind M-j swap-pane -d -t {bottom}
+bind M-k swap-pane -d -t {top}
+bind M-i swap-pane -d -t {right}
 
 
 
 # Switch windows
-bind -n M-h previous-window
-bind -n M-t next-window
+bind -n M-, previous-window
+bind -n M-. next-window
 
 # Select window by number.
 bind -n M-1 select-window -t 1
@@ -205,8 +204,8 @@ bind -n M-( join-pane -t :9
 
 
 # Re-number (aka "move") current window within this session.
-bind -n M-. command-prompt -1 -p 'Renumber window to:' 'move-window -t %%'
-unbind .
+#bind -n M-. command-prompt -1 -p 'Renumber window to:' 'move-window -t %%'
+#unbind .
 
 # Move current pane to another session.
 #bind -n M-m command-prompt -p 'Move pane to session:' 'join-pane -t %%:'
