--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,18 +17,8 @@ set -g escape-time 1
 
 # Let nvim (and possibly other programs) know when focus is gained/lost.
 # In nvim, this corresponds to a FocusGained/FocusLost event.
+# https://unix.stackexchange.com/a/383044
 set -g focus-events on
-
-# Use emacs-style keybindings in command-line mode.
-set -g status-keys emacs
-
-# Use vi-style keybindings in copy mode.
-set -g mode-keys vi
-
-# Make the word separators used for `w` motion more Vim-like; ie, everything
-# but `_`.
-set -g word-separators ' !"#$%&()*+,-./:;<=>?@[\]^`{|}+~'
-set -ga word-separators "'"
 
 # Keep way more history. 100,000 lines shouldn't be more than a few MB.
 set -g history-limit 100000
@@ -39,64 +29,70 @@ set -g display-time 1250
 # 12-hour time format for `prefix t` time display.
 set -g clock-mode-style 12
 
+
+
+# Use emacs-style key bindings in command-line mode.
+set -g status-keys emacs
+
+# Use vi-style key bindings in copy mode.
+set -g mode-keys vi
+
+# Make the word separators used for `w` motion more Vim-like; i.e., everything
+# but `_`.
+set -g word-separators ' !"#$%&()*+,-./:;<=>?@[\]^`{|}+~'
+set -ga word-separators "'"
+
+# Don't automatically set the system clipboard when copying, since we do it
+# manually in the copy key bindings.
+set -g set-clipboard off
+
+
+
+# Dark theme.
+set -g status-style fg=black,bg=brightblack
+set -g pane-active-border-style fg=brightblack
+set -g pane-border-style fg=black
+
+# Status bar initially hidden.
+set -g status off
+
+
+
 # Start window numbers from 1.
 set -g base-index 1
 
 # Invert colors for the active window name, to "highlight" the tab.
 set -g window-status-current-style reverse
 
-# Bold window name when a bell rings in another window.
+# Show window name in bold when a bell rings in another window.
 set -g window-status-bell-style bold
 
 # Show the "terminal titles" (when they exist) in the list of window names
 # (i.e. "tabs") in the status bar. Titles are truncated at 16 chars.
+#
 # Titles can sometimes be things like the currently open file in vim (if
 # properly configured) or the remote server in ssh.
-SHOW_TERMTITLE="#{&&:#{!=:#T,},#{!=:#W,bash}}"
-WINDOW_STATUS_FORMAT="#I:#{=16:window_name}#{?$SHOW_TERMTITLE,:#{=16:pane_title},}#{?window_bell_flag,!,}"
-set -g window-status-current-format \
-    " $WINDOW_STATUS_FORMAT#{?window_zoomed_flag, #[bg=red]z,} "
-set -g window-status-format \
-    " $WINDOW_STATUS_FORMAT "
+show_title="#{&&:#{!=:#T,},#{!=:#W,bash}}"
+title="#{?$show_title,:#{=16:pane_title},}"
+window_status="#I:#{=16:window_name}$title#{?window_bell_flag,!,}"
+zoom="#{?window_zoomed_flag, #[bg=red]z,}"
+set -g window-status-current-format " $window_status$zoom "
+set -g window-status-format " $window_status "
 
 # There's whitespace in the above strings, so we can remove it from these ones.
-# (I moved the spaces into the above settings so that the background-highlight
-# for the active-window-name includes one space on either side of the name.)
+#
+# I moved the spaces into the above settings so that the background-highlight
+# for the active-window-name includes one space on either side of the name.
 set -g window-status-separator ""
 set -g status-left "[#S]"
 
 # 12-hour clock in the status bar.
 set -g status-right ' %l:%M%P '
 
-# Different color theme on different machines.
-%if 1  # Unknown machine; most likely a remote connection.
-    # Cyan!
-    set -g status-style fg=brightblack,bg=cyan
-    set -g pane-active-border-style fg=cyan
-    set -g pane-border-style fg=default
 
-    # Status bar initially shown.
-    set -g status on
-%endif
-# There are no else statements, so the above is the "else" block to this "if".
-# (Both run, but these later settings overwrite the previous ones.)
-%if #{||:#{||:#{m:kevan-*,#{host}},#{m:*-lt,#{host}}},#{m:*-dt,#{host}}}
-    # Dark background.
-    set -g status-style fg=brightblack,bg="#586E75"
-    set -g pane-active-border-style fg="#586E75"
-    set -g pane-border-style fg=black
-
-    # Light background.
-    #set -g status-style fg="#586E75",bg=white
-    #set -g pane-active-border-style fg="#93A1A1"
-    #set -g pane-border-style fg=white
-
-    # Status bar initially hidden.
-    set -g status off
-%endif
 
 # -----------------------------------------------------------------------------
-# Keybinds
+# Key bindings
 # -----------------------------------------------------------------------------
 
 # Change prefix key to M-e
@@ -110,32 +106,28 @@ bind -n M-p command-prompt
 # Redraw the screen, in case something goes wonky.
 bind -n M-r refresh-client
 
-# Copy / paste. (Pastes from the system clipboard!)
+# Enter copy mode.
 bind -n M-c copy-mode
-bind -n M-v run \
-    "command -v xclip > /dev/null && \
-     (xclip -out -selection clipboard | tmux load-buffer -); \
-     tmux paste-buffer"
+# Paste, from the system clipboard.
+bind -n M-v \
+    run 'xclip -out -selection clipboard | tmux load-buffer -' \; \
+    paste-buffer
 unbind [
 unbind ]
+
+
 
 # Toggle the status bar.
 bind -n "M-'" set status
 
 # Launch new windows in the same directory as the current pane
 # Also, unhide the status line whenever you create a new window.
-bind -n M-l new-window -c "#{pane_current_path}" \; set status on
+bind -n M-m new-window -c "#{pane_current_path}" \; set status on
 unbind c
 
 # Unhide the status line when you break a pane into its own window.
 bind -n M-x break-pane \; set status on
 unbind !
-
-# Bind page-up to "enter copy mode and go back one page", and then auto-exit
-# copy-mode upon paging to the bottom. Basically, make page-up/page-down behave
-# as expected.
-bind -n PageUp copy-mode -eu
-bind -n PageDown run true  # page-down does nothing when in normal mode.
 
 # Toggle fullscreen ("zoom") for the current pane.
 bind -n M-z resize-pane -Z
@@ -147,31 +139,31 @@ bind -n M-End select-layout even-vertical
 
 
 # Switch panes.
-bind -n M-m select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-i select-pane -R
+bind -n M-i select-pane -U
+bind -n M-j select-pane -L
+bind -n M-k select-pane -D
+bind -n M-l select-pane -R
 
 # Resize panes.
-bind -n M-M resize-pane -L 10
-bind -n M-J resize-pane -D 5
-bind -n M-K resize-pane -U 5
-bind -n M-I resize-pane -R 10
+bind -n M-I resize-pane -U 5
+bind -n M-J resize-pane -L 10
+bind -n M-K resize-pane -D 5
+bind -n M-L resize-pane -R 10
 
 # Split current pane.
-bind l split-window -c "#{pane_current_path}" -h \; swap-pane -U
-bind n split-window -c "#{pane_current_path}"
-bind e split-window -c "#{pane_current_path}" \; swap-pane -U
-bind u split-window -c "#{pane_current_path}" -h
+bind u split-window -c "#{pane_current_path}" \; swap-pane -U
+bind n split-window -c "#{pane_current_path}" -h \; swap-pane -U
+bind e split-window -c "#{pane_current_path}"
+bind o split-window -c "#{pane_current_path}" -h
 
 # Swap two panes.
 #
 # The syntax `{left-of}` doesn't seem to work in tmux 3.0a, so we use {left}
 # instead, as a rough approximation of what we actually want.
-bind M-m swap-pane -d -t {left}
-bind M-j swap-pane -d -t {bottom}
-bind M-k swap-pane -d -t {top}
-bind M-i swap-pane -d -t {right}
+bind M-i swap-pane -d -t {top}
+bind M-j swap-pane -d -t {left}
+bind M-k swap-pane -d -t {bottom}
+bind M-l swap-pane -d -t {right}
 
 
 
@@ -223,65 +215,55 @@ bind y command-prompt -p 'Save history to filename:' -I '~/tmux-history' \
 bind Y command-prompt -p 'Save history to filename:' -I '~/tmux-history' \
     'capture-pane -S - ; save-buffer %% ; delete-buffer'
 
+
+
 # -----------------------------------------------------------------------------
-# Copy mode binds
+# Copy mode key bindings.
 # -----------------------------------------------------------------------------
 
-# Use v to select text, vi-style.
-bind -T copy-mode-vi v send-keys -X begin-selection
+source-file ~/.config/tmux/vi-remap.conf
 
-# Rebind rectangle-toggle.
-bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
+# Bind page up and page down in normal mode.
+bind -n PageUp copy-mode -u
+bind -n PageDown run true
 
-# Don't accidentally exit copy mode with C-c.
-# Also can use this to cancel selection.
-bind -T copy-mode-vi C-c send-keys -X clear-selection
+# If you page down all the way to the bottom, exit copy mode.
+bind -T copy-mode-vi PageDown send -X page-down-and-cancel
 
-# Do exit copy mode when escape is pressed (the other keybind for this is `q`).
-bind -T copy-mode-vi Escape send-keys -X cancel
-
-# Scroll 5x faster in copy mode.
-bind -T copy-mode-vi C-e send-keys -X -N 5 scroll-down
-bind -T copy-mode-vi C-y send-keys -X -N 5 scroll-up
-
-# i-search!
-bind -T copy-mode-vi C-r command-prompt -i -I "#{pane_search_string}" -p "(search up)" "send -X search-backward-incremental \"%%%\""
-bind -T copy-mode-vi C-s command-prompt -i -I "#{pane_search_string}" -p "(search down)" "send -X search-forward-incremental \"%%%\""
-
-# Home and end keys.
-bind -T copy-mode-vi Home send-keys -X back-to-indentation
-bind -T copy-mode-vi End send-keys -X end-of-line
+# i-search
+bind -T copy-mode-vi C-r \
+    command-prompt -i -I "#{pane_search_string}" -p "(search up)" \
+    'send -X search-backward-incremental "%%%"'
+bind -T copy-mode-vi C-s \
+    command-prompt -i -I "#{pane_search_string}" -p "(search down)" \
+    'send -X search-forward-incremental "%%%"'
 
 
 
-# Yank to the system clipboard by default (if xclip is installed).
+# Regular copy.
 bind -T copy-mode-vi Enter \
-    send-keys -X copy-pipe-and-cancel \
-    "command -v xclip && xclip -in -selection clipboard || tmux load-buffer -"
+    send -X copy-pipe-and-cancel \
+        'xclip -in -selection clipboard'
 
-# Also yank the selection using the `x` key, since enter is a little far.
-bind -T copy-mode-vi x \
-    send-keys -X copy-pipe-and-cancel \
-    "command -v xclip && xclip -in -selection clipboard || tmux load-buffer -"
-
-# Yank the selection (to the system clipboard), without leaving copy mode.
-# The `refresh-client` is because copy-pipe garbles the text on the screen for
-# some reason.
-bind -T copy-mode-vi y \
-    send-keys -X copy-pipe \
-    "command -v xclip && xclip -in -selection clipboard || tmux load-buffer -" \; \
-    send-keys -X clear-selection \; \
-    refresh-client
-
-# Yank the current line, without the trailing newline.
+# Copy, but don't exit copy mode.
 bind -T copy-mode-vi d \
-    send-keys -X select-line \; \
-    send-keys -X copy-pipe-and-cancel "tr -d '\n' | \
-    (command -v xclip && xclip -in -selection clipboard || tmux load-buffer -)"
+    send -X copy-pipe \
+        'xclip -in -selection clipboard'
 
-# Yank from the cursor to end-of-line, without the trailing newline.
-bind -T copy-mode-vi D \
-    send-keys -X begin-selection \; \
-    send-keys -X end-of-line \; \
-    send-keys -X copy-pipe-and-cancel "tr -d '\n' | \
-    (command -v xclip && xclip -in -selection clipboard || tmux load-buffer -)"
+# Copy the current line (no trailing newline).
+#
+# It seems we must turn off the `set-clipboard` option for this to work.
+# Otherwise, tmux automatically sets the system clipboard as well, causing a
+# race condition. Depending on which happens first, the system clipboard may or
+# may not have a trailing newline.
+bind -T copy-mode-vi r \
+    send -X select-line \; \
+    send -X copy-pipe-and-cancel \
+        "tr -d '\n' | xclip -in -selection clipboard"
+
+# Copy to the end of the current line.
+bind -T copy-mode-vi w \
+    send -X begin-selection \; \
+    send -X end-of-line \; \
+    send -X copy-pipe-and-cancel \
+        "tr -d '\n' | xclip -in -selection clipboard"
