--- a/.inputrc
+++ b/.inputrc
@@ -20,4 +20,4 @@ set colored-completion-prefix on
 # Bind meta-o to exit shell if last command successful.
 # Gets queued if pressed while a command is running.
 # Can be cancelled with backspace.
-"\eo": "if [ $? -eq 0 ]; then exit; else false; fi\n"
+#"\eo": "if [ $? -eq 0 ]; then exit; else false; fi\n"
