git config: defaultBranch = main

--- a/.config/git/config
+++ b/.config/git/config
@@ -2,6 +2,9 @@
 	email = khollbach@gmail.com
 	name = Kevan Hollbach
 
+[init]
+    defaultBranch = main
+
 [include]
     # Include delta configs.
     path = delta
