Alacritty: default window dimensions 80x24

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,4 +1,7 @@
 window:
+  dimensions:
+    columns: 80
+    lines: 24
   padding:
     x: 3
     y: 3
@@ -6,7 +9,6 @@ window:
 font:
   normal:
     family: DejaVu Sans Mono
-
   size: 12
 
 mouse:
